@@ -95,6 +95,8 @@ Version 1.4.4 - CVS
     Fixes #1085377.
   - Reuploaded newmail plugin sounds. Fixes files uploaded to cvs without binary
     option.
+  - Changing your JavaScript preference required a re-login to work.
+    Fixes #983614.
 
 Version 1.4.3a - 2 June 2004
 ----------------------------
